deployments/zero/kustomize/zero-minerset-controller/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-minerset-controller # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - zero-minerset-controller
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --kubeconfig=/opt/zero/conf/config
        - --config=/opt/zero/conf/zero-minerset-controller.yaml
        - --v=10
        image: "ccr.ccs.tencentyun.com/superproj/zero-minerset-controller-amd64:v1.0.0"
        name: zero-minerset-controller
        ports:
        - containerPort: 20249
          name: metrics
          protocol: TCP
        - containerPort: 20250
          name: health
          protocol: TCP
        livenessProbe:
          httpGet:
            port: 20250
            path: /healthz
        readinessProbe:
          httpGet:
            port: 20250
            path: /readyz
        startupProbe:
          httpGet:
            port: 20250
            path: /healthz
        volumeMounts:
        - mountPath: /opt/zero/conf/zero-minerset-controller.yaml
          name: zero-minerset-controller
          subPath: zero-minerset-controller.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: zero-minerset-controller.yaml
            path: zero-minerset-controller.yaml
          name: zero-minerset-controller
        name: zero-minerset-controller
